2011-10-02  Peter Bloomfield

	* src/save-restore.c (config_defclient_save): do not use
	uninitialized GError.

2011-09-28  Peter Bloomfield

	* configure.in: check for javascriptcoregtk with recent webkit;
	thanks to Vincent Untz and Marcus Hüwe; fixes bgo #660263.

2011-09-18  Peter Bloomfield

	* src/print-gtk.c (draw_page): use ngettext for plural; fixes
	bgo #659390.

2011-09-09  Peter Bloomfield  <peter@t43.bellsouth.net>

	* src/main-window.c: use checking_mail_lock to protect access to
	checking_mail.
	* src/main.c (balsa_cleanup): ditto.
	* src/threads.h: declare checking_mail.

2011-09-08  Peter Bloomfield  <peter@t43.bellsouth.net>

	reviewed by: <delete if not using a buddy>

	* src/main-window.c: set view-filter in an idle callback.

2011-09-06  Peter Bloomfield

	* src/balsa-mblist.c (bmbl_mru_show_tree): try better default
	size for mblist widget.

2011-09-01  Peter Bloomfield

	* libbalsa/misc.c (lb_text_attr): add gssize len argument;
	(libbalsa_text_attr_string): pass -1;
	(libbalsa_text_attr_file): pass len; avoid stack buffer
	overflow.

2011-08-31  Peter Bloomfield

	* libbalsa/misc.c (libbalsa_text_attr_file): use GFile methods.
	* src/sendmsg-window.c (sw_set_charset): check for error return.

2011-08-30  Peter Bloomfield

	* src/main-window.c: call gtk_container_resize_children after
	adding the notebook page for a newly opened mailbox; should not
	be necessary, but seems to fix
	<URL:http://mail.gnome.org/archives/balsa-list/2011-August/msg00017.html>.

2011-08-30  Peter Bloomfield

	* configure.in: webkit can be used with threads disabled if glib
	version is 2.24 or later.

2011-08-29  Pawel Salek

	* libbalsa/filter-funcs.c: implement libbalsa_condition_to_string_user
	* libbalsa/filter.h: add libbalsa_condition_to_string_user() proto.
	* src/filter-edit-callbacks.c: use it to provide more user-friendly
	filter view.

2011-08-28  Peter Bloomfield

	* src/main-window.c: when network connection is reestablished,